--- a/questdiary/src/main/res/layout/activity_main.xml
+++ b/questdiary/src/main/res/layout/activity_main.xml
@@ -13,34 +13,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <LinearLayout
+        <EditText
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="10">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="2015년 11월 29일"
-            android:textSize="30dp"
-            android:gravity="center"
-            android:id="@+id/dateView"/></LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_height="wrap_content"
+            android:text=""
+            android:id="@+id/edtDate"/>
         <Button
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/btnWrite"
             android:enabled="false"
-
-            android:text="저장"/></LinearLayout>
+            android:text="저장"/>
     </LinearLayout>
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/edtDiary"
-        android:background="#f9c66e"
+        android:background="#00ff00"
         android:lines="8"/>
 
 </LinearLayout>
